feat(docker): implement docker full-stack support and fix MoMoT ClassLoader/Package issues
- Moved MoMoT runner classes to 'blocky_momot_runner' package to comply with Java Module System.
- Implemented ClassLoader bridge in blocky_custom to resolve EMF metamodel identity mismatch.
- Hardened method discovery in MomotRunService for reliable mediator override invocation.
- Restored UI log redirection with robust MirroringOutputStream.
- Added detailed diagnostic documentation in docs/features/docker-full-stack/.